--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <link rel="icon" type="image/png" href="/src/assets/bear.png" />
+    <link rel="icon" type="image/png" href="/src/assets/pig.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>byunnn</title>
+    <title>byunn</title>
   </head>
   <body>
     <div id="app"></div>
